Temporarily disable class subscript setter derivative registration test.

Blocked by SR-13096.